--- a/Project.toml
+++ b/Project.toml
@@ -1,2 +1,5 @@
 [deps]
+HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
+OpenSSL_jll = "458c3c95-2e84-50aa-8efc-19380b2a3a95"
+Zlib_jll = "83775a58-1f1d-513f-b197-d71354ab007a"
